--- a/html+css palyground/portfolio/style.css
+++ b/html+css palyground/portfolio/style.css
@@ -1,10 +1,55 @@
-/*my*/
 body,
 html {
 	height: 100%;
-	background: rgb(20, 20, 20);
-	font-family: "Roboto", sans-serif;
 	overflow: hidden;
+}
+
+.double-slider .slick-dots {
+	position: fixed;
+	z-index: 100;
+	width: 40px;
+	height: auto;
+	bottom: auto;
+	top: 75%;
+	right: 0;
+	transform: translateY(-50%);
+	left: auto;
+	color: #4056a1;
+	display: block;
+}
+
+.double-slider .slick-dots li {
+	display: block;
+	width: 100%;
+	height: auto;
+}
+
+.double-slider .slick-dots li button {
+	position: relative;
+	width: 20px;
+	height: 15px;
+	text-align: center;
+}
+
+.double-slider .slick-dots li button:before {
+	content: "";
+	background: #4056a1;
+	color: #4056a1;
+	height: 5px;
+	width: 30px;
+	border-radius: 5rem;
+	position: absolute;
+	top: 50%;
+	right: 0;
+	left: auto;
+	transform: translateY(-50%);
+	transition: all 0.2s ease-in-out;
+	opacity: 0.6;
+}
+
+.double-slider .slick-dots li.slick-active button:before {
+	width: 60px;
+	opacity: 1;
 }
 
 .double-slider {
@@ -15,8 +60,6 @@ html {
 	width: 100vw;
 	height: 100vh;
 	overflow: hidden;
-
-	/* display: flex; */
 }
 
 .left-section {
@@ -43,21 +86,115 @@ html {
 }
 
 .profile-text {
-	width: 50vw !important;
+	width: 65vw !important;
+	left: 35%;
 	position: relative;
 	overflow: hidden;
 	border: none;
-	background-color: tomato;
-	text-align: right;
+	background-color: #efe2ba;
+
+	display: flex;
+	justify-content: center;
+	align-content: center;
+	align-items: center;
+}
+
+@media only screen and (max-width: 1300px) {
+	.profile-text {
+		width: 50vw !important;
+		left: 50%;
+		position: relative;
+		overflow: hidden;
+		border: none;
+		background-color: #efe2ba;
+
+		display: flex;
+		justify-content: center;
+		align-content: center;
+		align-items: center;
+	}
+}
+
+a {
+	color: black;
+}
+
+.bio {
+	position: absolute;
+	top: 40%;
+	left: 1%;
+	-ms-transform: translateY(-50%);
+	transform: translateY(-50%);
+
+	display: flex;
+	flex-direction: column;
+}
+
+.name-sig {
+	display: flex;
+	justify-content: center;
+	padding-bottom: 1%;
+}
+
+#name {
+	font-size: 40px;
+	font-weight: bold;
+}
+
+#signature {
+	height: 50px;
+	padding-left: 1%;
+}
+
+#email {
+	font-size: 30px;
+	color: black;
+	align-self: center;
+	padding-bottom: 1%;
+}
+
+.bio-text {
+	font-family: Helvetica, Arial, sans-serif;
+	font-size: xx-large;
+	padding-bottom: 1%;
+}
+
+#linkedin-logo {
+	position: relative;
+	top: 5px;
+	width: 30px;
+	height: 30px;
+	display: inline-block;
+}
+
+#github-logo {
+	position: relative;
+	top: 5px;
+	width: 30px;
+	height: 30px;
+	display: inline-block;
 }
 
 .profile-photo {
 	width: 50vw !important;
 	position: relative;
-	left: 50%;
+
 	overflow: hidden;
 	border: none;
-	background-color: thistle;
+	background-color: #d79922;
+
+	display: flex;
+	align-content: center;
+	align-items: center;
+}
+
+#selfie {
+	border-radius: 3rem;
+	width: 400px;
+	height: 400px;
+	position: relative;
+	left: 10%;
+	top: 20%;
 }
 
 .project-list {
@@ -75,11 +212,6 @@ html {
 	left: 25%;
 	border: none;
 	background-color: yellow;
-}
-
-.profile-photo img {
-	width: 30vw;
-	height: 30vw;
 }
 
 .lists {
