--- a/html+css palyground/portfolio/style.css
+++ b/html+css palyground/portfolio/style.css
@@ -134,10 +134,8 @@ a {
 
 .bio {
 	position: absolute;
-	top: 40%;
+	top: 10%;
 	left: 1%;
-	-ms-transform: translateY(-50%);
-	transform: translateY(-50%);
 
 	display: flex;
 	flex-direction: column;
@@ -150,6 +148,7 @@ a {
 }
 
 #name {
+	font-family: Lucida Bright, Georgia, serif;
 	font-size: 40px;
 	font-weight: bold;
 }
@@ -167,8 +166,8 @@ a {
 }
 
 .bio-text {
-	font-family: Helvetica, Arial, sans-serif;
-	font-size: xx-large;
+	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-size: x-large;
 	padding-bottom: 1%;
 }
 
@@ -196,6 +195,12 @@ a {
 	display: inline-block;
 }
 
+#simao-img {
+	position: absolute;
+	bottom: 10%;
+	left: 25%;
+}
+
 .profile-photo {
 	position: relative;
 	overflow: hidden;
@@ -205,6 +210,9 @@ a {
 	display: flex;
 	align-content: center;
 	align-items: center;
+
+	border-top-right-radius: 5rem;
+	border-bottom-right-radius: 5rem;
 }
 
 #selfie {
@@ -243,12 +251,10 @@ a {
 	width: 50vw !important;
 	position: relative;
 	overflow: hidden;
-	border: none;
 	background-color: #efe2ba;
 
-	display: flex;
-	align-content: center;
-	align-items: center;
+	display: flex !important;
+	flex-direction: column;
 }
 
 .skills-right {
@@ -256,13 +262,11 @@ a {
 	left: 50%;
 	position: relative;
 	overflow: hidden;
-	border: none;
+	border: none !important;
 	background-color: #d79922;
 
-	display: flex;
-	justify-content: center;
-	align-content: center;
-	align-items: center;
+	display: flex i !important;
+	flex-direction: column;
 }
 
 #skills-page-arrow {
@@ -271,4 +275,73 @@ a {
 	position: absolute;
 	bottom: 5%;
 	right: 5%;
+}
+
+.skills-page-triangle {
+	position: relative;
+	left: -10px;
+	width: 0;
+	height: 0;
+	border-top: 60px solid transparent;
+	border-bottom: 60px solid transparent;
+	border-left: 60px solid #efe2ba;
+}
+
+#skills-title-left {
+	font-size: 50px;
+	font-weight: bold;
+
+	align-self: flex-end;
+	padding-right: 1%;
+	font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva,
+		Verdana, sans-serif;
+}
+
+#skills-title-right {
+	font-size: 50px;
+	font-weight: bold;
+
+	padding-left: 1%;
+	font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva,
+		Verdana, sans-serif;
+}
+
+.skills-section {
+	position: relative;
+	left: 5vw;
+	width: 40vw;
+	padding-top: 2%;
+}
+
+.skills-section-title {
+	font-size: 40px;
+	font-weight: bold;
+	font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva,
+		Verdana, sans-serif;
+}
+
+.skills-row {
+	display: flex;
+	justify-content: space-between;
+	padding-top: 3vh;
+}
+
+.single-skill {
+	display: flex;
+	align-content: center;
+	flex-direction: column;
+	width: 50px;
+}
+
+.skill-icon {
+	flex: 1;
+	width: 50px;
+	height: 50px;
+	margin: 0 !important;
+}
+
+.skill-name {
+	text-align: center;
+	font-size: larger;
+	padding-top: 2px;
 }
