--- a/html+css palyground/portfolio/style.css
+++ b/html+css palyground/portfolio/style.css
@@ -162,13 +162,18 @@ a {
 	font-size: 30px;
 	color: black;
 	align-self: center;
-	padding-bottom: 1%;
+	padding-bottom: 2%;
 }
 
 .bio-text {
 	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
 	font-size: x-large;
 	padding-bottom: 1%;
+}
+
+.jump-link {
+	cursor: pointer;
+	text-decoration: underline;
 }
 
 #profile-page-arrow {
@@ -205,14 +210,41 @@ a {
 	position: relative;
 	overflow: hidden;
 	border: none;
-	background-color: #d79922;
-
-	display: flex;
-	align-content: center;
-	align-items: center;
 
 	border-top-right-radius: 5rem;
 	border-bottom-right-radius: 5rem;
+}
+
+.profile-photo-card {
+	height: 100vh;
+	width: 35vw;
+	position: relative;
+	overflow: hidden;
+	border: none;
+	background-color: #d79922;
+
+	border-top-right-radius: 5rem;
+	border-bottom-right-radius: 5rem;
+	display: flex;
+	align-content: center;
+	align-items: center;
+}
+
+@media only screen and (max-width: 1300px) {
+	.profile-photo-card {
+		height: 100vh;
+		width: 50vw;
+		position: relative;
+		overflow: hidden;
+		border: none;
+		background-color: #d79922;
+
+		border-top-right-radius: 5rem;
+		border-bottom-right-radius: 5rem;
+		display: flex;
+		align-content: center;
+		align-items: center;
+	}
 }
 
 #selfie {
@@ -221,7 +253,6 @@ a {
 	height: 400px;
 	position: relative;
 	left: 10%;
-	top: 20%;
 }
 
 .project-list {
