--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -92,6 +92,8 @@
         </div>
       </div>
 
+
+
       <div class="skills-section">
         <span class="skills-section-title">Web / App Development</span>
         <div class="skills-row">
@@ -214,7 +216,7 @@
 
       </div>
       <div class="nav-tabs">
-        <app-tabs [active]="'profile'"></app-tabs>
+        <app-tabs [active]="'about'"></app-tabs>
       </div>
 
     </div>
