--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -1,1 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
+body,
+html {
+  height: 100vh;
+  width: 100%;
+  overflow: auto;
+  background-color: #efe2ba;
+  /* position: fixed;
+  top: 0px;
+  bottom: 0px;
+  left: 0px;
+  right: 0px; */
+}
