--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -170,19 +170,20 @@
       </div>
     </div>
 
+
     <div class="item project-list">
-      <p>projects</p>
-      <div class="lists">
+      <div class="project-list-card">
         <p>project list</p>
       </div>
-
     </div>
+
   </div>
 
   <div class="right-section">
 
     <div class="item profile-text">
       <div class="bio">
+
         <div class="name-sig">
           <span id="name">Shiqin Yan </span>
           <img src="./assets/./signature.png" id="signature">
@@ -311,7 +312,11 @@
     </div>
 
     <div class="item project-detail">
-      <p>project</p>
+
+      <div class="nav-tabs">
+        <app-tabs [active]="'projects'"></app-tabs>
+      </div>
+
     </div>
 
 
