--- a/portfolio/src/app/tabs/tabs.component.css
+++ b/portfolio/src/app/tabs/tabs.component.css
@@ -1,4 +1,5 @@
 button {
+  float: right;
   width: 10vw;
   height: 5vh;
   background-color: #c5cbe3;
@@ -6,12 +7,13 @@ button {
   border: 0;
   font-weight: bold;
   font-size: x-large;
-
+  padding-top: 5px;
   border-top-left-radius: 2rem;
-  border-top-right-radius: 1rem;
+  border-bottom-left-radius: 2rem;
   cursor: pointer;
 }
 
 button.active {
+  width: 12vw;
   background-color: #4056a1;
 }
