--- a/portfolio/src/app/app.component.html
+++ b/portfolio/src/app/app.component.html
@@ -173,7 +173,10 @@
 
     <div class="item project-list">
       <div class="project-list-card">
-        <p>project list</p>
+        <span id="project-list-title">Projects</span>
+        <div class="project-list-container">
+          <p>project list</p>
+        </div>
       </div>
     </div>
 
@@ -312,11 +315,12 @@
     </div>
 
     <div class="item project-detail">
+      <div class="project-detail-container">
 
+      </div>
       <div class="nav-tabs">
         <app-tabs [active]="'projects'"></app-tabs>
       </div>
-
     </div>
 
 
