finished project list component + styling, with 50% displaying bug

--- a/portfolio/src/app/homepage/homepage.component.html
+++ b/portfolio/src/app/homepage/homepage.component.html
@@ -176,7 +176,8 @@
             <div class="project-list-card">
                 <span id="project-list-title">Projects</span>
                 <div class="project-list-container">
-                    <p>project list</p>
+                    <!-- <app-project-list></app-project-list> -->
+                    <p>proj list</p>
                 </div>
             </div>
         </div>
