--- a/portfolio/src/styles.css
+++ b/portfolio/src/styles.css
@@ -2,12 +2,7 @@
 body,
 html {
   height: 100vh;
-  width: 100%;
-  overflow: auto;
-  background-color: #efe2ba;
-  /* position: fixed;
-  top: 0px;
-  bottom: 0px;
-  left: 0px;
-  right: 0px; */
+  width: 100vw;
+  overflow: hidden;
+  background-color: grey;
 }
