updated project list, start implementing dynamic proj detail component

--- a/src/app/projectList/project-list-item/project-list-item.component.css
+++ b/src/app/projectList/project-list-item/project-list-item.component.css
@@ -46,10 +46,12 @@
 .project-item-name {
   font-size: x-large;
   font-weight: bold;
+  font-family: Lucida Grande, Lucida Sans Unicode, Lucida Sans, Geneva, Verdana,
+    sans-serif;
 }
 
 .project-item-tech {
-  font-size: large;
+  font-size: x-large;
   font-style: italic;
 }
 
