dynamic project detail working

--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -317,7 +317,7 @@
 
         <div class="item project-detail">
             <div class="project-detail-container">
-
+                <router-outlet></router-outlet>
             </div>
             <div class="nav-tabs">
                 <app-tabs [active]="'projects'"></app-tabs>
