modified neuos proj

--- a/src/app/projectDetails/neuos/neuos.component.html
+++ b/src/app/projectDetails/neuos/neuos.component.html
@@ -1,5 +1,5 @@
 <img src="./assets/images/projects/neuos.png">
-<p>Course project for operating systems.</p>
+<p>Operating Systems course project.</p>
 <p>A hierarchical file system (like UNIX file system) with command line interface and graphical
     user interface was developed. The core functionalities were implemented with C++, and the
     GUI was built with Qt.
