updated animize proj

--- a/src/app/projectDetails/animize/animize.component.html
+++ b/src/app/projectDetails/animize/animize.component.html
@@ -11,5 +11,6 @@
 <p>
     This project won the best machine learning award in 2019 NUS SOC
     <a href="https://sws.comp.nus.edu.sg/2019/" target="_blank" rel="noopener noreferrer">workshop</a>,
-    see our poster <a href="https://sws.comp.nus.edu.sg/2019/" target="_blank" rel="noopener noreferrer">here</a>.
+    see our poster <a href="https://player-eric.com/resources/AnimizePoster.pdf" target="_blank"
+        rel="noopener noreferrer">here</a>.
 </p>
