--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -213,7 +213,7 @@
                     <a href="https://github.com/player-eric" target="_blank" rel="noopener noreferrer"><img
                             src="./assets/images/icons/github.icon.png" id="github-logo"></a>.
                 </span>
-                <span class="bio-text">See my <a href="https://player-eric.com/resources/Resume.pdf"
+                <span class="bio-text">See my <a href="https://player-eric.com/resources/MyResume.pdf"
                         style="font-weight:700" target="_blank" rel="noopener noreferrer">
                         resume</a>
                     for more of my
