--- a/src/app/projectDetails/animize/animize.component.html
+++ b/src/app/projectDetails/animize/animize.component.html
@@ -4,7 +4,7 @@
 </p>
 <p>
     2,000 Anime posters were collected and constructed into a network based on similarities.
-    And then various community detection algorithms were run on this network to pick out the
+    And then various community detection algorithms were run on this network to filter out the
     most representative posters of different genres. These posters are further used as style
     reference images in neural style transfer algorithm to stylize the input images.
 </p>
