--- a/src/app/projectDetails/brownbytes/brownbytes.component.html
+++ b/src/app/projectDetails/brownbytes/brownbytes.component.html
@@ -2,7 +2,7 @@
 <p>
     <a href="http://brownbytes.club/about" target="_blank" rel="noopener noreferrer">BrownBytes</a> is a website for
     sharing free food events information,
-    donating spare meal plan swipes, and networking with people inside or outside Brown community.
+    donating spare meal plan swipes, and networking with foodies inside or outside the Brown community.
 </p>
 <p>
     The frontend was implemented with React and Redux, and the backend was built with Node.js and
