--- a/src/app/projectDetails/coveryournose/coveryournose.component.html
+++ b/src/app/projectDetails/coveryournose/coveryournose.component.html
@@ -14,7 +14,7 @@
     <a href="https://arxiv.org/abs/1512.02325" target="_blank" rel="noopener noreferrer">
         (SSD)
     </a>
-    trained on ~10k annotated images, and a few
+    trained on ~10k annotated images and a few
     HAAR-feature based faicial landmark detectors, CoverYourNose achieves satisfactory performance
     on detecting wrongly worn masks. For more details, please refer to this
     <a href="https://player-eric.com/resources/CoverYourNoseReport.pdf" target="_blank" rel="noopener noreferrer">
