--- a/src/app/projectDetails/nmtvis/nmtvis.component.html
+++ b/src/app/projectDetails/nmtvis/nmtvis.component.html
@@ -1,9 +1,9 @@
 <img src="./assets/images/projects/nmtvis.png">
 <p>
-    Quantities of machine translation models under the category of Neural Machine Translation
+    In recent years, uantities of machine translation models under the category of Neural Machine Translation
     (<a href="https://en.wikipedia.org/wiki/Neural_machine_translation" target="_blank"
         rel="noopener noreferrer">NMT</a>)
-    have been designed in recent years. While these models can give extraordinary translations,
+    have been designed. While these models can give extraordinary translations,
     they are always hard to understand and debug due to neural networks' lack of interpretability.
 </p>
 <p>
@@ -19,6 +19,12 @@
     and beam search decoding
     (<a href="https://player-eric.com/resources/nmtvis-demos/beam_demo" target="_blank"
         rel="noopener noreferrer">demo</a>).
-    It is published to PyPI and the source code is available
-    <a href="https://github.com/player-eric/NMT-Visualizer" target="_blank" rel="noopener noreferrer">here</a>
+    Hopefully this tool can help researchers better understand their NMT models.
+</p>
+<p>
+    nmtvis is published to PyPI and the source
+    code is available
+
+    <a href="https://github.com/player-eric/NMT-Visualizer" target="_blank" rel="noopener noreferrer">here</a>.
+
 </p>
